<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeNav"
        android:enabled="true"
        android:icon="@drawable/ic_home_checked"
        android:title="@string/home" />
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_heart_white"
        android:title="@string/favourite" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart_white"
        android:title="@string/cart" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_order_white"
        android:title="@string/orders" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />

</menu>